--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,54 +9,58 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
         android:text="QUESTION"
-        android:textSize="36sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/textView1"
+        android:textSize="32sp"
+        app:layout_constraintBottom_toTopOf="@id/option_one"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:textAlignment="center"
+        />
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/option_one"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="driver 1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView"
-        app:layout_constraintEnd_toStartOf="@id/textView2"
-        app:layout_constraintBottom_toTopOf="@id/textView3"
+        app:layout_constraintEnd_toStartOf="@id/option_two"
+        app:layout_constraintBottom_toTopOf="@id/option_three"
         />
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/option_two"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="driver 2"
-        app:layout_constraintStart_toEndOf="@+id/textView1"
+        app:layout_constraintStart_toEndOf="@+id/option_one"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView"
-        app:layout_constraintBottom_toTopOf="@id/textView4"
+        app:layout_constraintBottom_toTopOf="@id/option_four"
         />
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/option_three"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="driver 3"
-        app:layout_constraintTop_toBottomOf="@+id/textView1"
+        app:layout_constraintTop_toBottomOf="@+id/option_one"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/textView4"
+        app:layout_constraintEnd_toStartOf="@id/option_four"
         app:layout_constraintStart_toStartOf="parent"
         />
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/option_four"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="driver 4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/textView3"
+        app:layout_constraintStart_toEndOf="@id/option_three"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/option_two"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
