--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,59 +8,101 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/question_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         android:text="QUESTION"
+        android:textAlignment="center"
         android:textSize="32sp"
-        app:layout_constraintBottom_toTopOf="@id/option_one"
+        app:layout_constraintBottom_toTopOf="@id/option_one_tv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textAlignment="center"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/option_one"
+        android:id="@+id/option_one_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="driver 1"
+        android:text=""
+        tools:text="option 1"
+        app:layout_constraintBottom_toTopOf="@id/option_three_tv"
+        app:layout_constraintEnd_toStartOf="@id/option_two_tv"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView"
-        app:layout_constraintEnd_toStartOf="@id/option_two"
-        app:layout_constraintBottom_toTopOf="@id/option_three"
-        />
+        app:layout_constraintTop_toBottomOf="@id/question_tv" />
+
     <TextView
-        android:id="@+id/option_two"
+        android:id="@+id/option_two_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="driver 2"
-        app:layout_constraintStart_toEndOf="@+id/option_one"
+        android:text=""
+        tools:text="option 2"
+        app:layout_constraintBottom_toTopOf="@id/option_four_tv"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView"
-        app:layout_constraintBottom_toTopOf="@id/option_four"
-        />
+        app:layout_constraintStart_toEndOf="@+id/option_one_tv"
+        app:layout_constraintTop_toBottomOf="@id/question_tv" />
+
     <TextView
-        android:id="@+id/option_three"
+        android:id="@+id/option_three_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="driver 3"
-        app:layout_constraintTop_toBottomOf="@+id/option_one"
+        android:text=""
+        tools:text="option 3"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/option_four"
+        app:layout_constraintEnd_toStartOf="@id/option_four_tv"
         app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/option_one_tv" />
+
     <TextView
-        android:id="@+id/option_four"
+        android:id="@+id/option_four_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="driver 4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/option_three"
+        android:text=""
+        tools:text="option 4"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/option_two"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/option_three_tv"
+        app:layout_constraintTop_toBottomOf="@+id/option_two_tv" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/points_cv"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="130dp"
+        android:layout_marginEnd="130dp"
+        app:cardBackgroundColor="#5599CC00"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/option_four_tv"
+
+        >
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/points_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="10dp"
+            android:text="Points"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/points_value_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="10dp"
+            android:text="0"
+            android:textSize="24sp"
+            tools:text="0" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
