--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,66 +13,94 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
+        android:layout_marginTop="40dp"
         android:text="QUESTION"
         android:textAlignment="center"
-        android:textSize="32sp"
-        app:layout_constraintBottom_toTopOf="@id/option_one_tv"
+        android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/question_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/question_tv"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/option_one_tv"/>
+        app:layout_constraintDimensionRatio="16:9"/>
 
-    <TextView
-        android:id="@+id/option_one_tv"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/options_cl"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""
-        tools:text="option 1"
-        app:layout_constraintBottom_toTopOf="@id/option_three_tv"
-        app:layout_constraintEnd_toStartOf="@id/option_two_tv"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/question_iv" />
+        android:layout_marginBottom="100dp"
+        app:layout_constraintBottom_toTopOf="@id/points_cv"
+        >
 
-    <TextView
-        android:id="@+id/option_two_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        tools:text="option 2"
-        app:layout_constraintBottom_toTopOf="@id/option_four_tv"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/option_one_tv"
-        app:layout_constraintTop_toBottomOf="@id/question_iv" />
+        <TextView
+            android:id="@+id/option_one_tv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:text=""
+            tools:text="option 1"
+            app:layout_constraintBottom_toTopOf="@+id/option_three_tv"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/option_two_tv"
+            android:textAlignment="center"
+            android:gravity="center"
+            />
 
-    <TextView
-        android:id="@+id/option_three_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        tools:text="option 3"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/option_four_tv"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/option_one_tv" />
+        <TextView
+            android:id="@+id/option_two_tv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:text=""
+            tools:text="option 2"
+            app:layout_constraintBottom_toTopOf="@+id/option_four_tv"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/option_one_tv"
+            android:textAlignment="center"
+            android:gravity="center"
+            />
 
-    <TextView
-        android:id="@+id/option_four_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        tools:text="option 4"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/option_three_tv"
-        app:layout_constraintTop_toBottomOf="@+id/option_two_tv" />
+        <TextView
+            android:id="@+id/option_three_tv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:text=""
+            tools:text="option 3"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/option_one_tv"
+            app:layout_constraintEnd_toStartOf="@id/option_four_tv"
+            android:textAlignment="center"
+            android:gravity="center"
+            />
+
+        <TextView
+            android:id="@+id/option_four_tv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:text=""
+            tools:text="option 4"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/option_two_tv"
+            app:layout_constraintStart_toEndOf="@+id/option_three_tv"
+            android:textAlignment="center"
+            android:gravity="center"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
     <androidx.cardview.widget.CardView
         android:id="@+id/points_cv"
@@ -84,7 +112,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/option_four_tv"
+        android:layout_marginBottom="30dp"
         >
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
