--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -5,10 +5,10 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".GameActivity">
 
     <TextView
-        android:id="@+id/question_tv"
+        android:id="@+id/tv_question"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -22,54 +22,54 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/question_iv"
+        android:id="@+id/iv_question"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/question_tv"
+        app:layout_constraintTop_toBottomOf="@id/tv_question"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintDimensionRatio="16:9"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/options_cl"
+        android:id="@+id/cl_options"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="100dp"
-        app:layout_constraintBottom_toTopOf="@id/points_cv"
+        app:layout_constraintBottom_toTopOf="@id/cv_points"
         >
 
         <TextView
-            android:id="@+id/option_one_tv"
+            android:id="@+id/tv_option_one"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:text=""
             tools:text="option 1"
-            app:layout_constraintBottom_toTopOf="@+id/option_three_tv"
+            app:layout_constraintBottom_toTopOf="@+id/tv_option_three"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/option_two_tv"
+            app:layout_constraintEnd_toStartOf="@+id/tv_option_two"
             android:textAlignment="center"
             android:gravity="center"
             />
 
         <TextView
-            android:id="@+id/option_two_tv"
+            android:id="@+id/tv_option_two"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:text=""
             tools:text="option 2"
-            app:layout_constraintBottom_toTopOf="@+id/option_four_tv"
+            app:layout_constraintBottom_toTopOf="@+id/tv_option_four"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/option_one_tv"
+            app:layout_constraintStart_toEndOf="@+id/tv_option_one"
             android:textAlignment="center"
             android:gravity="center"
             />
 
         <TextView
-            android:id="@+id/option_three_tv"
+            android:id="@+id/tv_option_three"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
@@ -77,14 +77,14 @@
             tools:text="option 3"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/option_one_tv"
-            app:layout_constraintEnd_toStartOf="@id/option_four_tv"
+            app:layout_constraintTop_toBottomOf="@id/tv_option_one"
+            app:layout_constraintEnd_toStartOf="@id/tv_option_four"
             android:textAlignment="center"
             android:gravity="center"
             />
 
         <TextView
-            android:id="@+id/option_four_tv"
+            android:id="@+id/tv_option_four"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
@@ -92,8 +92,8 @@
             tools:text="option 4"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/option_two_tv"
-            app:layout_constraintStart_toEndOf="@+id/option_three_tv"
+            app:layout_constraintTop_toBottomOf="@+id/tv_option_two"
+            app:layout_constraintStart_toEndOf="@+id/tv_option_three"
             android:textAlignment="center"
             android:gravity="center"
             />
@@ -103,7 +103,7 @@
 
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/points_cv"
+        android:id="@+id/cv_points"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="130dp"
@@ -119,7 +119,7 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/points_tv"
+                android:id="@+id/tv_points_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
@@ -129,7 +129,7 @@
                 android:textSize="24sp" />
 
             <TextView
-                android:id="@+id/points_value_tv"
+                android:id="@+id/tv_points_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
