--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -8,27 +8,35 @@
     tools:context=".MainMenuActivity">
 
 
-    <Button
+    <ImageButton
         android:id="@+id/btn_settings"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="200dp"
         android:layout_marginEnd="40dp"
-        android:text="Settings"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:src="@drawable/gear_logo"
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"
+        android:padding="16dp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Settings" />
 
-    <Button
+    <ImageButton
         android:id="@+id/btn_leaderboard"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="200dp"
-        android:text="Leaderboard"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:src="@drawable/trophy_logo"
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"
+        android:padding="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Leaderboard" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_play"
@@ -39,7 +47,6 @@
         android:text="Play"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="150dp"
-
         tools:text="Play" />
 
 
