Add Change Username feature with validation and navigation

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -41,5 +41,17 @@
         android:text="Login"
         />
 
+    <Button
+        android:id="@+id/btn_change_username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="200dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Change Username"
+        />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
