--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -5,141 +5,149 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
+    android:padding="24dp"
     tools:context="ui.game.GameActivity">
 
     <TextView
         android:id="@+id/tv_question"
+        style="@style/TextAppearance.MaterialComponents.Headline6"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginTop="40dp"
-        android:text="QUESTION"
         android:textAlignment="center"
-        android:textSize="26sp"
+        android:textSize="28sp"
+        android:textColor="@color/onBackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/cv_image_container"
+        />
 
-    <ImageView
-        android:id="@+id/iv_question"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_image_container"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_question"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="24dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_question"
+        app:layout_constraintBottom_toTopOf="@id/gl_options"
         app:layout_constraintDimensionRatio="16:9"
-        tools:ignore="ContentDescription" />
+        >
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_options"
-        android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/iv_question"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerInside"
+            tools:ignore="ContentDescription"
+            tools:src="@drawable/ic_launcher_foreground" />
+    </androidx.cardview.widget.CardView>
+
+    <androidx.gridlayout.widget.GridLayout
+        android:id="@+id/gl_options"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="100dp"
+        android:layout_marginTop="32dp"
+        app:columnCount="2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/cv_points"
+        android:layout_marginBottom="36dp"
         >
 
         <TextView
             android:id="@+id/tv_option_one"
+            style="@style/OptionTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:text=""
-            tools:text="option 1"
-            app:layout_constraintBottom_toTopOf="@+id/tv_option_three"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/tv_option_two"
-            android:textAlignment="center"
+            android:layout_margin="8dp"
             android:gravity="center"
-            />
+            android:textAlignment="center"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1"
+            tools:text="Option 1" />
 
         <TextView
             android:id="@+id/tv_option_two"
+            style="@style/OptionTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:text=""
-            tools:text="option 2"
-            app:layout_constraintBottom_toTopOf="@+id/tv_option_four"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/tv_option_one"
-            android:textAlignment="center"
+            android:layout_margin="8dp"
             android:gravity="center"
-            />
+            android:textAlignment="center"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1"
+            tools:text="Option 2" />
 
         <TextView
             android:id="@+id/tv_option_three"
+            style="@style/OptionTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:text=""
-            tools:text="option 3"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_option_one"
-            app:layout_constraintEnd_toStartOf="@id/tv_option_four"
-            android:textAlignment="center"
+            android:layout_margin="8dp"
             android:gravity="center"
-            />
+            android:textAlignment="center"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1"
+            tools:text="Option 3" />
 
         <TextView
             android:id="@+id/tv_option_four"
+            style="@style/OptionTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:text=""
-            tools:text="option 4"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_option_two"
-            app:layout_constraintStart_toEndOf="@+id/tv_option_three"
-            android:textAlignment="center"
+            android:layout_margin="8dp"
             android:gravity="center"
-            />
+            android:textAlignment="center"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1"
+            tools:text="Option 4" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
+    </androidx.gridlayout.widget.GridLayout>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_points"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="130dp"
-        android:layout_marginEnd="130dp"
-        app:cardBackgroundColor="#5599CC00"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
+        app:cardBackgroundColor="@color/surfaceVariant"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginBottom="30dp"
-        >
-        <androidx.constraintlayout.widget.ConstraintLayout
+        app:layout_constraintStart_toStartOf="parent">
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="16dp">
 
             <TextView
                 android:id="@+id/tv_points_text"
-                android:layout_width="wrap_content"
+                style="@style/TextAppearance.MaterialComponents.Subtitle1"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginStart="10dp"
+                android:layout_weight="1"
                 android:text="Points"
-                android:textSize="24sp" />
+                android:textColor="@color/onSurface" />
 
             <TextView
                 android:id="@+id/tv_points_value"
+                style="@style/TextAppearance.MaterialComponents.Headline6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginEnd="10dp"
-                android:text="0"
-                android:textSize="24sp"
+                android:textColor="@color/onSurface"
                 tools:text="0" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </LinearLayout>
+
     </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
